--- a/css/style.css
+++ b/css/style.css
@@ -33,12 +33,11 @@ header .top-nav {
     
 }
 
-header nav {
-    
-}
+
 
 .burger-menu {
     font-size: 25px;
+    text-align: right;
 }
 
 .menu {
@@ -74,6 +73,12 @@ header nav {
     top: 50%;
     transform: translate(-50%, -50%);
 
+}
+
+@media all and (max-width: 992px ) {
+    header nav {
+        text-align: right;
+    }
 }
 /*Jumbotron*/
 
@@ -177,11 +182,81 @@ header nav {
 /* nature */
 .nature {
     color: white;
-
+    padding-top: 50px;
+    
 }
 .nature .container {    
     background-image: url('../img/ScooterHelbiz-2400.jpg');
     background-size: cover;
-    height: 400px;    
+    height: 400px;  
+    position: relative;  
+    
+    
 }
+.nature-text {
+    padding-top: 110px;
+    padding-left: 150px;
+    padding-right: 150px;
+    text-align: center;
+}
+.nature h2 {    
+    font-size: 35px;   
+}
+
+.nature p {    
+    font-size: 15px;   
+    padding-top: 20px;
+    padding-bottom: 10px;
+}
+
+.nature a {
+        display: block;
+        text-decoration: none;
+        color: white;          
+}
+
+/* get-find*/
+.get-find [class*="col-"] {
+    padding: 30px 0;   
+    color: white;
+}
+
+.col_content_left {
+    margin-right: 20px;  
+    text-align: center;    
+    background-color:#2e3d4a;
+    background-image: url('../img/HelbiZAPP.png');
+    background-position: -300% -370% ;
+    background-size: cover;
+    background-repeat: no-repeat;
+    height: 350px;
+}
+
+.col_content_left h2 {
+    padding: 20px 0;
+}
+
+.col_content_left p {
+    padding-bottom: 20px;
+}
+
+.col_content_right {
+    
+    text-align: center;    
+    background-image: url('../img/cities-1500.jpg');   
+    background-size: cover; 
+    height: 350px;
+}
+
+.col_content_right h2 {
+    padding: 20px 0;
+}
+
+.col_content_right p {
+    padding-bottom: 20px;
+}
+
+
+
+
 
